cmake_minimum_required(VERSION 2.4)
project(ContactManager)

set(CMAKE_CXX_FLAGS "-std=c++11")
set(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/lib")
add_subdirectory("Interface")
link_directories("${PROJECT_SOURCE_DIR}/lib")
include_directories("${PROJECT_SOURCE_DIR}/main/include")
include_directories("${PROJECT_SOURCE_DIR}/list/include")
include_directories("${PROJECT_SOURCE_DIR}/multimap/include")
include_directories("${PROJECT_SOURCE_DIR}/vector/include")
include_directories("${PROJECT_SOURCE_DIR}/Interface/include")
include_directories("${PROJECT_SOURCE_DIR}/unord_multimap/include/")
add_executable(CMVector "${PROJECT_SOURCE_DIR}/main/src/CManagerMain.cpp")
add_executable(CMList "${PROJECT_SOURCE_DIR}/main/src/CMListMain.cpp")
add_executable(CMMap "${PROJECT_SOURCE_DIR}/main/src/CMMapMain.cpp")
add_executable(CMUMap "${PROJECT_SOURCE_DIR}/main/src/CMUMapMain.cpp")
add_dependencies(CMVector cmvector interface)
add_dependencies(CMList cmlist interface)
add_dependencies(CMMap cmmulti interface)
add_dependencies(CMUMap cmumap interface)
target_link_libraries(CMVector -linterface)
target_link_libraries(CMList -linterface)
target_link_libraries(CMMap -linterface)
target_link_libraries(CMUMap -linterface)
